<resources>
    <string name="app_name">PlayList Maker</string>
    <string name="search_button_text">Search</string>
    <string name="media_button_text">Media library</string>
    <string name="settings_button_text">Settings</string>
    <string name="settings_theme_text">Dark theme</string>
    <string name="settings_share_text">Share app</string>
    <string name="settings_support_text">Write to support</string>
    <string name="settings_eula_text">Eula</string>
    <string name="settings_title">Settings</string>
    <string name="search_title">Search</string>
    <string name="eula_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="chooser_text">Share via</string>
    <string name="nothing_found">Nothing found</string>
    <string name="error_found">Communication problems\n\nThe download failed. Check your internet connection</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="history_text">You found</string>
    <string name="history_button_text">Clear</string>
    <string name="country_title">Country</string>
    <string name="genre_title">Genre</string>
    <string name="year_title">Year</string>
    <string name="album_title">Album</string>
    <string name="duration_title">Duration</string>
    <string name="default_current_time">00:00</string>
    <string name="fav_tracks_tab">Favourite tracks</string>
    <string name="playlist_tab">Playlists</string>
    <string name="media_title">Media Library</string>
    <string name="empty_fav">Your media is empty</string>
    <string name="empty_playlist">You don\'t create\n any playlists</string>
    <string name="create_playlist_button">New playlist</string>
    <string name="add_playlist_button">Create</string>
    <string name="add_playlist_title">New Playlist</string>
    <string name="add_playlist_name_hint">Name*</string>
    <string name="add_playlist_desc_hint">Description</string>
    <string name="add_playlist_dialog_title">Are you sure?</string>
    <string name="add_playlist_dialog_desc">All unsaved data will be deleted</string>
    <string name="add_playlist_dialog_positive_button">Finish</string>
    <string name="add_playlist_dialog_neutral_button">Cancel</string>
    <plurals name="tracks_count">
        <item quantity="zero">%d треков</item>
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
    <string name="bottom_sheet_title">Add to playlist</string>
    <string name="audioArgs">audioArgs</string>
    <string name="dialog_delete_track_message">Do you wand delete this track?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="empty_track_list_toast_text">No tracks to share</string>
    <string name="share_text">Share playlist</string>
    <string name="delete_text">Delete playlist</string>
    <string name="edit_text">Edit playlist</string>
    <string name="dialog_delete_playlist_message">Do you wand delete this playlist?</string>
    <string name="update_playlist">Update</string>
    <plurals name="track_sum_time">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>
</resources>