<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment"
    android:theme="@style/Theme.PlayListMaker.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings_title"
        app:titleTextAppearance="@style/AppBarTextStyle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_theme_switch"
        style="@style/SettingsScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings_theme_text"
        app:thumbTint="@drawable/thumb_tint"
        app:trackTint="@drawable/track_tint" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_button"
        style="@style/SettingsScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share_icon"
        android:text="@string/settings_share_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_button"
        style="@style/SettingsScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support_icon"
        android:text="@string/settings_support_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/eula_button"
        style="@style/SettingsScreenButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/right_arrow_icon"
        android:text="@string/settings_eula_text" />

</LinearLayout>