<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlayListMaker.SearchActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search_title"
        app:titleTextAppearance="@style/AppBarTextStyle" />

    <FrameLayout
        android:id="@+id/edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/standard_margin"
        android:layout_marginVertical="8dp"
        android:background="@drawable/et_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/search_toolbar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_text"
            style="@style/MyEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:drawableStart="@drawable/et_icon"
            android:drawablePadding="10dp"
            android:hint="@string/search_title"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="32"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black"
            android:theme="@style/MyEditTextTheme"/>

        <ImageView
            android:id="@+id/search_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:src="@drawable/et_clear"
            android:background="@color/et_background"
            android:visibility="visible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/error_found_pic" />

        <TextView
            android:id="@+id/placeholder_text"
            style="@style/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:text="@string/error_found"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/error_found_refresh_button"
            style="@style/ErrorPlaceholderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/refresh_button_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout"
        tools:visibility="gone">

        <TextView
            style="@style/placeholderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="20dp"
            android:text="@string/history_text"
            android:textAlignment="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/track_item_list" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_button"
            style="@style/ErrorPlaceholderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_24"
            android:text="@string/history_button_text" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout"
        tools:listitem="@layout/track_item_list"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminateTint="@color/main_blue"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>