<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                android:src="@drawable/placeholder"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_24"
                app:layout_constraintStart_toStartOf="@+id/guideline_start_24"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/track_name"
                style="@style/AudioPlayerTextBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_24"
                app:layout_constraintStart_toStartOf="@+id/guideline_start_24"
                app:layout_constraintTop_toBottomOf="@id/poster"
                tools:text="Yesterday (Remastered 2009)" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/artist_name"
                style="@style/AudioPlayerTextBase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_24"
                app:layout_constraintStart_toStartOf="@+id/guideline_start_24"
                app:layout_constraintTop_toBottomOf="@id/track_name"
                tools:text="The Beatles" />

            <ImageButton
                android:id="@+id/playlist_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/playlist_button"
                app:layout_constraintBottom_toTopOf="@id/play_button"
                app:layout_constraintEnd_toStartOf="@id/play_button"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/guideline_start_24"
                app:layout_constraintTop_toBottomOf="@id/play_button" />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/play_button"
                app:layout_constraintEnd_toStartOf="@+id/like_button"
                app:layout_constraintStart_toEndOf="@id/playlist_button"
                app:layout_constraintTop_toBottomOf="@id/artist_name" />

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/like_button"
                app:layout_constraintBottom_toTopOf="@id/play_button"
                app:layout_constraintEnd_toEndOf="@id/guideline_end_24"
                app:layout_constraintStart_toEndOf="@+id/play_button"
                app:layout_constraintTop_toBottomOf="@id/play_button" />

            <TextView
                android:id="@+id/current_time"
                style="@style/AudioPlayerTextBase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/default_current_time"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_24"
                app:layout_constraintStart_toStartOf="@+id/guideline_start_24"
                app:layout_constraintTop_toBottomOf="@id/play_button" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/track_time_title"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/duration_title"
                android:textColor="@color/audioplayer_text_info_title"
                app:layout_constraintBottom_toTopOf="@id/album_title"
                app:layout_constraintEnd_toStartOf="@id/track_time"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline_start_16"
                app:layout_constraintTop_toBottomOf="@id/current_time"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/track_time"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                app:layout_constraintBaseline_toBaselineOf="@id/track_time_title"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_16"
                app:layout_constraintStart_toEndOf="@id/track_time_title"
                tools:text="5:35" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/album_title"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:text="@string/album_title"
                android:textColor="@color/audioplayer_text_info_title"
                app:layout_constraintBottom_toTopOf="@id/year_title"
                app:layout_constraintEnd_toStartOf="@id/album"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline_start_16"
                app:layout_constraintTop_toBottomOf="@id/track_time_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/album"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                app:layout_constraintBaseline_toBaselineOf="@id/album_title"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_16"
                app:layout_constraintStart_toEndOf="@id/album_title"
                tools:text="Yesterday (Remastered 2009)"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constrainedWidth="true"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/year_title"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_title"
                android:textColor="@color/audioplayer_text_info_title"
                app:layout_constraintBottom_toTopOf="@id/genre_title"
                app:layout_constraintEnd_toStartOf="@id/year"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline_start_16"
                app:layout_constraintTop_toBottomOf="@id/album_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/year"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                app:layout_constraintBaseline_toBaselineOf="@id/year_title"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_16"
                app:layout_constraintStart_toEndOf="@id/year_title"
                tools:text="1965" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/genre_title"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre_title"
                android:textColor="@color/audioplayer_text_info_title"
                app:layout_constraintBottom_toTopOf="@id/country_title"
                app:layout_constraintEnd_toStartOf="@id/genre"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline_start_16"
                app:layout_constraintTop_toBottomOf="@id/year_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/genre"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                app:layout_constraintBaseline_toBaselineOf="@id/genre_title"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_16"
                app:layout_constraintStart_toEndOf="@id/genre_title"
                tools:text="Rock" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/country_title"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_title"
                android:layout_marginBottom="20dp"
                android:textColor="@color/audioplayer_text_info_title"
                app:layout_constraintEnd_toStartOf="@id/country"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@id/guideline_start_16"
                app:layout_constraintTop_toBottomOf="@id/genre_title"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/country"
                style="@style/AudioPlayerTextInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                app:layout_constraintBaseline_toBaselineOf="@id/country_title"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_16"
                app:layout_constraintStart_toEndOf="@id/country_title"
                tools:text="Великобритания" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>